# torrviewer

./: .clang-format  .gitignore  .gitmodules  meson.build  meson_options.txt
docs/: implementation-plan.md  windows-dev-build.md  windows-static-build.md
scripts/: build-windows-dev-msys2.sh  build-windows-dev.ps1  build-windows-static-msys2.sh  build-windows-static.ps1  build.sh  pack_resources.py
src/: app.cpp  app.hpp  app_settings.cpp  app_settings.hpp  cache_policy.cpp  cache_policy.hpp  config.hpp.in  gl_api.hpp  input_source.cpp  input_source.hpp  logger.cpp  logger.hpp  main.cpp  memory_disk_io.cpp  memory_disk_io.hpp  meson.build  mpv_player.cpp  mpv_player.hpp  opengl.hpp  profiler.hpp  sdl_event_manager.cpp  sdl_event_manager.hpp  torrent_service.cpp  torrent_service.hpp  torrent_stream.hpp  tracy_allocations.cpp  window_state.hpp
src/ui/: clay_renderer.cpp  clay_renderer.hpp  file_browser_page.cpp  file_browser_page.hpp  player_overlay.cpp  player_overlay.hpp  settings_page.cpp  settings_page.hpp  title_page.cpp  title_page.hpp
subprojects/: libtorrent-rasterbar.wrap  mpv.wrap  thorvg.wrap  tracy.wrap
tests/: memory_disk_io_test.cpp  torrent_stream_probe.cpp
